css/ecommerce.less
/* ... */
.productlist-filter {
    .form-group {
        vertical-align: top;
        display: block;
        @media only screen and (min-width: 768px) {
            display: block !important;
        }
        @media @mobile {
            width: 100%;
            margin-bottom: 0;
        }
    }

    // Select

    select {
        height: 35px;
        // margin-bottom: 12px;
        padding: 8px 8px 8px 8px;
        border: 1px solid @color-swatch2;
        background-color: @color-swatch1;
        color: @color-swatch5;
        cursor: pointer;
        width: 100%;
        &:focus {
            outline: 0;
        }
    }


    // Label

    label {
        font-family: @font-swatch2-font-family;
        font-size: 14px;
        color: @color-swatch4;
        line-height: @font-swatch4-line-height;
        font-weight: normal;
        display: block;
        width: 100%;
    }


    // Product Search

    .productlist-search {
        @media @mobile {
        margin: 10px 0;
        }
        label {
            margin-bottom: 0;

            @media @tablet {
                margin-bottom: 10px;
            }
        }
        input {
            position: relative;
            height: 35px;
            border: 1px solid @color-swatch2;
            background-color: @color-swatch1;
            -webkit-appearance: none;
            -moz-appearance: none;
            -webkit-border-radius: 0;
            transform: translate(0,4px);

            @media @mobile {
                width: 100%;
                max-width: 100%;
                margin-bottom: 12px;
            }
        }
        .btn {
                position: relative;
                margin: 0;
                transform: translate(0,-2px);

            @media @tablet {
                transform: translate(0,-9px);
                display: block;
            }

            @media @mobile {
                margin-bottom: 10px;
            }
        }
    }
}


// Item Count

.productlist-item-count {
    font-family: @font-swatch4-font-family;
    font-size: 14px;
    font-weight: @font-swatch4-font-weight;
    line-height: @font-swatch4-line-height;
    letter-spacing: @font-swatch4-letter-spacing;
    color: @color-swatch5;
}


// Basket
// -----------------------------

.widget.ecombasket {
	margin-bottom: 2em;
	// Basket
	.ecombasket-pull {
		text-transform: uppercase;
		border: 2px solid @color-swatch1;
		background-color: @color-swatch3;
		border-radius: 4px;
		width: 170px;
		padding: 8px 14px 8px 37px;
		background-image: image('/images/basket-white.svg');
		background-repeat: no-repeat;
        background-position: 12% 48%;
        background-size: 18px;
		&:hover {;
			background-color: @color-swatch2;
			&:hover {
				p, .basket-count {
					color: @color-swatch1;
				}
			}
		}
		p, .basket-count {
			font-family: @font-swatch7-font-family;
			font-size: @font-swatch7-font-size;
			font-weight: @font-swatch7-font-weight;
			line-height: @font-swatch7-line-height;
			letter-spacing: @font-swatch7-letter-spacing;
			color: @font-swatch7-color;
		}
		p:before {
			display: none;
		}
	}
	// Content Dropdown
	.ecombasket-item-title,
	.ecombasket-item-price,
	.ecombasket-total-wrap p
	 {
		font-family: @font-swatch2-font-family;
    	font-size: 16px;
        color: @color-swatch4;
		line-height: @font-swatch4-line-height;
		font-weight: normal;
	}
	// List Container
	.ecombasket-list-container {
		width: 300px;
		padding: 20px;
		margin-top: 4px;
		border: 1px solid @color-swatch7;
		border-top: 2px solid @color-swatch2;
        background-color: @color-swatch1;
        @media @mobile {
        	width: 100%;
        }
        ul li {
        	position: relative;
    		border-bottom: 1px solid darken(@color-swatch1,15%);
        }
	    // Checkout Button
	    .ecombasket-checkout-wrap {
	    	margin: 0;
	    	a.ecombasket-checkout-link {
		    	padding: 6px 8px;
				background-color: @color-swatch3;
				color: @color-swatch1;
				letter-spacing: @font-swatch7-letter-spacing;
				font-size: 12px;
				box-shadow: none;
				border: none!important;
				&:hover {
					background-color: @color-swatch2;
					color: @color-swatch1;
				}
			}
		}
	}
	.ecombasket-item-count-wrapper {
		position: relative;
		top: -2px;
		font-family: @font-swatch4-font-family;
		font-size: 12px;
		line-height: 16px;
		color: @color-swatch5;
		letter-spacing: 1px;
		text-transform: uppercase;
	}
	// Remove Button
	.ecombasket-remove-button {
        background-color: @color-swatch3;
        color: @font-swatch7-color;
        display: inline-block;
        font-size: bkscale(@font-swatch5-font-size, 0.8);
        text-decoration: none;
        padding: 0 0.6em;
        border: none;
        line-height: 1.4;
        &:hover {
            background-color: darken(@color-swatch3, 10%);
        }
    }
	// Price
	.ecombasket-total {
		color: @color-swatch5;
	}
}
/* ... */

